[package]
name = "gas-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm = "9.0.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.51"
alloy-primitives = "0.7.4"
